Sync local dev and srpint release

--- a/config/default/core.entity_form_display.media.remote_video.default.yml
+++ b/config/default/core.entity_form_display.media.remote_video.default.yml
@@ -59,5 +59,6 @@ content:
     region: content
     third_party_settings: {  }
 hidden:
+  feeds_item: true
   field_media_oembed_video: true
   name: true
