--- a/config/default/feeds.feed_type.taxonomy_child_gender_serbia_ser.yml
+++ b/config/default/feeds.feed_type.taxonomy_child_gender_serbia_ser.yml
@@ -8,7 +8,7 @@ dependencies:
   module:
     - taxonomy
 id: taxonomy_child_gender_serbia_ser
-label: 'Taxonomy - Child Gender serbia-serbian'
+label: 'Taxonomy - Child Gender - serbia-serbian'
 description: 'Taxonomy - Child Gender serbia-serbian'
 help: ''
 import_period: 3600
