--- a/config/default/feeds.feed_type.taxonomy_seasons.yml
+++ b/config/default/feeds.feed_type.taxonomy_seasons.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - core.base_field_override.taxonomy_term.seasons.name
     - taxonomy.vocabulary.seasons
   module:
     - taxonomy
@@ -23,7 +24,7 @@ parser_configuration:
 processor: 'entity:taxonomy_term'
 processor_configuration:
   langcode: en
-  update_existing: 0
+  update_existing: 1
   update_non_existent: _keep
   expire: -1
   skip_hash_check: false
