--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -14,6 +14,7 @@ module:
   config: 0
   config_translation: 0
   contact: 0
+  content_moderation: 0
   contextual: 0
   datetime: 0
   dblog: 0
@@ -22,6 +23,7 @@ module:
   editor: 0
   entity: 0
   feeds: 0
+  feeds_tamper: 0
   field: 0
   field_ui: 0
   file: 0
@@ -50,6 +52,7 @@ module:
   serialization: 0
   shortcut: 0
   system: 0
+  tamper: 0
   taxonomy: 0
   text: 0
   toolbar: 0
@@ -59,6 +62,7 @@ module:
   video_embed_field: 0
   video_embed_media: 0
   views_ui: 0
+  workflows: 0
   content_translation: 10
   views: 10
   standard: 1000
