--- a/config/default/feeds.feed_type.taxonomy_child_age_serbia_serbia.yml
+++ b/config/default/feeds.feed_type.taxonomy_child_age_serbia_serbia.yml
@@ -1,15 +1,15 @@
-uuid: 1cf80335-94bf-46d3-9e58-46240f2a692b
+uuid: 209d304e-012c-4635-ab4a-65dabbb42154
 langcode: en
 status: true
 dependencies:
   config:
-    - core.base_field_override.taxonomy_term.keywords.name
-    - taxonomy.vocabulary.keywords
+    - core.base_field_override.taxonomy_term.child_age.name
+    - taxonomy.vocabulary.child_age
   module:
     - taxonomy
-id: taxonomy_keywords
-label: 'Taxonomy - Keywords'
-description: 'Taxonomy - Keywords'
+id: taxonomy_child_age_serbia_serbia
+label: 'Taxonomy - Child Age - serbia-serbian'
+description: 'Taxonomy - Child Age - serbia-serbian'
 help: ''
 import_period: 3600
 fetcher: upload
@@ -23,33 +23,29 @@ parser_configuration:
   line_limit: 100
 processor: 'entity:taxonomy_term'
 processor_configuration:
-  langcode: en
+  langcode: rs-sr
   update_existing: 1
   update_non_existent: _keep
   expire: -1
   skip_hash_check: false
   values:
-    vid: keywords
+    vid: child_age
   owner_id: 0
   authorize: false
   owner_feed_author: false
 custom_sources:
-  '':
-    label: ''
-    value: ''
-    machine_name: ''
   term_id:
     label: Term_ID
     value: Term_ID
     machine_name: term_id
+  name:
+    label: Name
+    value: Name
+    machine_name: name
   term_name:
     label: Term_name
     value: Term_name
     machine_name: term_name
-  language_code:
-    label: Language_code
-    value: Language_code
-    machine_name: language_code
 mappings:
   -
     target: tid
@@ -64,10 +60,4 @@ mappings:
       value: term_name
     unique: {  }
     settings:
-      language: null
-  -
-    target: langcode
-    map:
-      value: language_code
-    settings:
-      language: null
+      language: rs-sr
