--- a/config/default/feeds.feed_type.taxonomy_keywords_serbia_serbian.yml
+++ b/config/default/feeds.feed_type.taxonomy_keywords_serbia_serbian.yml
@@ -1,4 +1,4 @@
-uuid: 1cf80335-94bf-46d3-9e58-46240f2a692b
+uuid: 47d08202-ab79-4660-9b48-a80b82a7de7a
 langcode: en
 status: true
 dependencies:
@@ -7,9 +7,9 @@ dependencies:
     - taxonomy.vocabulary.keywords
   module:
     - taxonomy
-id: taxonomy_keywords
-label: 'Taxonomy - Keywords'
-description: 'Taxonomy - Keywords'
+id: taxonomy_keywords_serbia_serbian
+label: 'Taxonomy - Keywords - serbia-serbian'
+description: 'Taxonomy - Keywords - serbia-serbian'
 help: ''
 import_period: 3600
 fetcher: upload
@@ -23,7 +23,7 @@ parser_configuration:
   line_limit: 100
 processor: 'entity:taxonomy_term'
 processor_configuration:
-  langcode: en
+  langcode: rs-sr
   update_existing: 1
   update_non_existent: _keep
   expire: -1
@@ -34,22 +34,14 @@ processor_configuration:
   authorize: false
   owner_feed_author: false
 custom_sources:
-  '':
-    label: ''
-    value: ''
-    machine_name: ''
-  term_id:
-    label: Term_ID
-    value: Term_ID
-    machine_name: term_id
   term_name:
     label: Term_name
     value: Term_name
     machine_name: term_name
-  language_code:
-    label: Language_code
-    value: Language_code
-    machine_name: language_code
+  term_id:
+    label: Term_ID
+    value: Term_ID
+    machine_name: term_id
 mappings:
   -
     target: tid
@@ -64,10 +56,4 @@ mappings:
       value: term_name
     unique: {  }
     settings:
-      language: null
-  -
-    target: langcode
-    map:
-      value: language_code
-    settings:
-      language: null
+      language: rs-sr
