--- a/config/default/user.role.global_admin.yml
+++ b/config/default/user.role.global_admin.yml
@@ -51,7 +51,6 @@ permissions:
   - 'create vaccinations content'
   - 'create video media'
   - 'create video_article content'
-  - 'delete any page content'
   - 'edit any activities content'
   - 'edit any article content'
   - 'edit any chatbot content'
@@ -83,5 +82,6 @@ permissions:
   - 'edit terms in type_of_support'
   - 'use text format full_html'
   - 'use text format restricted_html'
+  - 'view any unpublished content'
   - 'view own unpublished media'
   - 'view the administration theme'
